--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,14 @@ plugins {
 }
 
 android {
+
     namespace 'algonquin.cst2335.ward0252'
     compileSdk 33
 
+    buildFeatures{
+        viewBinding true
+    }
+    
     defaultConfig {
         applicationId "algonquin.cst2335.ward0252"
         minSdk 22
